# c-mesh-api

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  README.md  README.rst  dev-requirements.txt
.ci/: apply-clanfgormat.sh  build-lib.sh  build-test-moderx.sh  build-test-modetx.sh  build-test.sh  check-clangformat.sh  check-style.sh  fetch-clangformat.sh
.ci/modules/: asserts.sh
.github/: SECURITY.md
.github/ISSUE_TEMPLATE/: bug-report.md  generic-task-issue.md
.github/workflows/: c-cpp.yml  generate_protos.yml
example/: CMakeLists.txt  gnu_make.mk  main.c  makefile  nmake.mk
example/linux/gw-example/: CMakeLists.txt  Readme.md  main.c  makefile  meter_hook.c  meter_hook.h
example/linux/gw-example/docker/: Dockerfile  Readme.md
example/linux/proto-api/: CMakeLists.txt  main.c  makefile
lib/: CMakeLists.txt  gnu_make.mk  makefile  nmake.mk  platform.mk  tools.mk  tools_msvc.mk
lib/api/: logger.h  wpc.h  wpc_proto.h
lib/include/: compiler_ext.h
lib/platform/: gnu_make.mk  makefile  nmake.mk  platform.h  serial.h
lib/platform/darwin/: serial_darwin.c
lib/platform/linux/: CMakeLists.txt  logger.c  makefile  platform.c  serial.c  serial_linux.c  serial_termios2.c  serial_termios2.h
lib/platform/posix/: logger.c  platform.c  serial_posix.c  serial_posix.h
lib/platform/win32/: logger.c  platform.c  serial_win32.c
lib/wpc/: CMakeLists.txt  attribute.c  csap.c  dsap.c  gnu_make.mk  makefile  msap.c  nmake.mk  slip.c  tsap.c  wpc.c  wpc_internal.c  wpc_ssr.c
lib/wpc/include/: attribute.h  csap.h  dsap.h  fht.h  lsap.h  msap.h  reassembly.h  slip.h  ssr.h  ssr_backend.h  tsap.h  uthash.h  util.h  utlist.h  wpc_constants.h  wpc_internal.h  wpc_ssr.h  wpc_types.h
lib/wpc/reassembly/: reassembly.c
lib/wpc/ssr/: fht.c  ssr.c
lib/wpc_proto/: CMakeLists.txt  config.c  config.h  makefile  wpc_proto.c
lib/wpc_proto/internal_modules/: common.c  common.h  proto_config.c  proto_config.h  proto_data.c  proto_data.h  proto_otap.c  proto_otap.h
lib/wpc_proto/proto_options/: config_message.options  data_message.options  generic_message.options  otap_message.options  wp_global.options
lib/wpc_proto/tools/: generate_proto_code.sh
python/: MANIFEST.in  setup.py  testbench.py
python/wirepas/mesh_api/: __init__.py  _mesh_api.pyx  wpc.pxd
stubbed_tests/: CMakeLists.txt  README.md  basic_tests.cpp  makefile  test_main.cpp
stubbed_tests/serialstub/: CMakeLists.txt  README.md  frame_handler.h  serial.cpp  serial_stub.cpp  wpc_frame.h
stubbed_tests/serialstub/serialstub/: frame_handler.h  serial.cpp  serial_stub.cpp  serial_stub.h  wpc_frame.cpp  wpc_frame.h
stubbed_tests/serialstub/serialstub/misc/: crc.cpp  crc.h
stubbed_tests/tests/: basic_tests.cpp  ul_fuzz_tests.cpp
stubbed_tests/tests/utils/: data_structures.h  queued_ul_data_handler.cpp  queued_ul_data_handler.h
test/: CMakeLists.txt  callback_tests.cpp  cdd_tests.cpp  general_tests.cpp  gnu_make.mk  makefile  makefile_gtest  nmake.mk  platform_ssr_unit_tests.cpp  scratchpad_tests.cpp  ssr_routing_unit_tests.cpp  ssr_tests.cpp  test.c  test.h  test_app.c  test_main.cpp  test_mode.h  test_mode_app.c  test_mode_tests.c  wpc_internal_ssr_unit_tests.cpp  wpc_ssr_unit_tests.cpp  wpc_test.cpp  wpc_test.hpp
test/otap_files/: .gitignore  dummy.otap
